# MonsterBox

./: .gitignore  LICENSE  MonsterBox-PWA.bat  MonsterBox.bat  PWA.md  README.md  ROADMAP.md  StatForge-PWA.bat  StatForge.bat  pyproject.toml  serve_local.py  setup.bat
.github/workflows/: keepalive.yml
docs/: cloud.js  engine.js  index.html  manifest.webmanifest  pdfimport.js  report.js  spells.json  sw.js  sync.js
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  requirements.txt  start-server.bat
server/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  schema_migrate.py  schemas.py  storage.py
server/app/routers/: account.py  admin.py  beta.py  health.py  report.py  statblocks.py
server/scripts/: demote_beta.py  grant_access.py  list_reports.py
server/tests/: test_smoke.py
src/monsterbox/: __init__.py  cli.py  models.py
src/monsterbox/combat/: dice.py  roller.py  tracker.py
src/monsterbox/ingest/: __init__.py  columns.py  extract.py  pipeline.py  render.py
src/monsterbox/storage/: __init__.py  repository.py
src/monsterbox/web/: __init__.py
src/monsterbox/web/static/: index.html
src/statforge/: __init__.py  cli.py  models.py
src/statforge/combat/: __init__.py  dice.py
src/statforge/ingest/: extract.py  parser.py
src/statforge/web/: __init__.py  server.py
src/statforge/web/static/: index.html
tests/: test_dice.py  test_digital.py  test_parser.py  test_sections.py  test_vision.py  test_web.py
tools/: export_compendium.py
