[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monsterbox"
version = "0.1.0"
description = "Scan a 5e stat block PDF, run it as a live, rollable encounter sheet."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "pypdf>=4.0",
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
# OCR fallback path (needs the Tesseract binary installed separately).
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0"]
# Vision-LLM primary path.
llm = ["anthropic>=0.40"]
# Local web UI.
web = ["flask>=3.0"]
dev = ["pytest>=8.0", "reportlab>=4.0"]

[project.scripts]
monsterbox = "monsterbox.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/monsterbox"]
artifacts = ["src/monsterbox/web/static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
